--- a/languages/salmon.pot
+++ b/languages/salmon.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Salmon 0.9.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/salmon\n"
-"POT-Creation-Date: 2018-01-30 23:02:01+00:00\n"
+"POT-Creation-Date: 2018-02-01 22:13:20+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -15,6 +15,32 @@ msgstr ""
 
 #. Plugin Name of the plugin/theme
 msgid "Salmon"
+msgstr ""
+
+#: templates/settings-page.php:12
+msgid ""
+"As updates and content flow in real time around the Web, conversations "
+"around the content are becoming increasingly fragmented into individual "
+"silos.  Salmon aims to define a standard protocol for comments and "
+"annotations to swim upstream to original update sources -- and spawn more "
+"commentary in a virtuous cycle.  It's open, decentralized, abuse resistant, "
+"and user centric."
+msgstr ""
+
+#: templates/settings-page.php:14
+msgid "Dependencies"
+msgstr ""
+
+#: templates/settings-page.php:40
+msgid "Further readings"
+msgstr ""
+
+#: templates/settings-page.php:42
+msgid "Spec page"
+msgstr ""
+
+#: templates/settings-page.php:43
+msgid "Give us feedback"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
